--- a/src/super-flu-thermometer.html
+++ b/src/super-flu-thermometer.html
@@ -284,7 +284,7 @@
 
         <!-- Status Panel -->
         <div class="status-panel">
-            <div class="temp-readout" id="temp-display">--.-°F</div>
+            <div class="temp-readout" id="temp-display">--.-°C</div>
             <div class="alert-text" id="status-text">INITIALIZING...</div>
         </div>
 
@@ -332,7 +332,7 @@
                         statusText.textContent = "CRITICAL WARNING";
                         statusText.style.color = "#ff0000";
                     }
-                    tempDisplay.textContent = (currentTemp * 9/5 + 32).toFixed(1) + "°F";
+                    tempDisplay.textContent = currentTemp.toFixed(1) + "°C";
                 }, 100);
             }
 
