--- a/src/part3.html
+++ b/src/part3.html
@@ -4,51 +4,169 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Part 3: The Krispy Peaks Affair</title>
+    <link rel="stylesheet" href="../page-theme.css">
     <style>
         body {
-            font-family: 'Courier New', monospace;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background: #1a1a1a;
-            color: #e0e0e0;
-            line-height: 1.6;
+            padding: 50px 20px 20px 20px;
+            background: #1a0a0a;
+            line-height: 1.7;
         }
+
         .story-container {
-            background: #2a2a2a;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 0 20px rgba(255,69,0,0.3);
+            margin: 0 auto;
+            max-width: 750px;
         }
-        h1 {
-            color: #ff4500;
-            text-align: center;
-            border-bottom: 2px solid #ff4500;
-            padding-bottom: 10px;
-        }
+
         .chapter {
-            margin: 30px 0;
-            padding: 20px;
-            border-left: 3px solid #ff4500;
-            background: #333;
+            margin-bottom: 60px;
+            opacity: 0;
+            transform: translateY(30px);
+            transition: opacity 0.6s ease, transform 0.6s ease;
         }
+
+        .chapter.revealed {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .chapter-number {
+            color: #ff0000;
+            font-size: 0.8em;
+            letter-spacing: 2px;
+            margin-bottom: 6px;
+            text-transform: uppercase;
+        }
+
+        .chapter-title {
+            color: #ff0000;
+            font-size: 1.6em;
+            margin-bottom: 20px;
+            text-shadow: 0 0 8px rgba(255, 0, 0, 0.3);
+        }
+
+        .paragraph {
+            margin-bottom: 18px;
+            font-size: 1.05em;
+            color: #e0e0e0;
+        }
+
+        .emphasis {
+            color: #ff6b35;
+            font-weight: bold;
+        }
+
+        .whisper {
+            font-style: italic;
+            color: #c44569;
+            font-size: 0.95em;
+        }
+
+        .divider {
+            text-align: center;
+            margin: 35px 0;
+            color: #ff0000;
+            font-size: 1.3em;
+            letter-spacing: 8px;
+        }
+
+        .twist-reveal {
+            background: linear-gradient(180deg, #1a0a0a 0%, #2a0a0a 50%, #1a0a0a 100%);
+            padding: 40px 25px;
+            margin: 50px -20px 30px -20px;
+            border-top: 2px solid #ff0000;
+            border-bottom: 2px solid #ff0000;
+            text-align: center;
+        }
+
+        .twist-reveal .reveal-text {
+            font-size: 1.15em;
+            color: #ff6b35;
+            text-shadow: 0 0 15px rgba(255, 107, 53, 0.5);
+            animation: pulse 2s infinite;
+            line-height: 1.8;
+        }
+
+        @keyframes pulse {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.7; }
+        }
+
+        .epilogue {
+            margin-top: 50px;
+            padding: 25px;
+            border: 1px solid #ff0000;
+            background: rgba(255, 0, 0, 0.05);
+        }
+
+        .signature {
+            text-align: right;
+            margin-top: 25px;
+            color: #ff0000;
+            font-style: italic;
+        }
+
         .character {
             font-style: italic;
-            color: #ffa500;
+            color: #ff6b35;
         }
+
         .dialogue {
-            color: #87ceeb;
+            color: #ffa07a;
             margin-left: 20px;
         }
+
         .evidence {
             background: #8b0000;
-            padding: 10px;
+            padding: 15px;
             border-radius: 5px;
-            margin: 10px 0;
+            margin: 15px 0;
+            border-left: 3px solid #ff0000;
+        }
+
+        .progress-indicator {
+            position: fixed;
+            top: 50px;
+            right: 15px;
+            width: 3px;
+            height: 150px;
+            background: rgba(255, 0, 0, 0.2);
+            border-radius: 2px;
+            z-index: 100;
+        }
+
+        .progress-bar {
+            width: 100%;
+            height: 0%;
+            background: #ff0000;
+            border-radius: 2px;
+            transition: height 0.3s ease;
+            box-shadow: 0 0 8px rgba(255, 0, 0, 0.5);
+        }
+
+        h1 {
+            color: #ff0000;
+            text-align: center;
+            border-bottom: 2px solid #ff0000;
+            padding-bottom: 15px;
+            margin-bottom: 30px;
+            text-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
+            font-size: 2.2em;
+        }
+
+        h2 {
+            color: #ff6b35;
+            text-align: center;
+            font-size: 1.3em;
+            margin-bottom: 40px;
+            font-style: italic;
         }
     </style>
 </head>
 <body>
+    <div class="progress-indicator">
+        <div class="progress-bar" id="progressBar"></div>
+    </div>
+    
     <div class="story-container">
         <h1>PART THREE: THE KRISPY PEAKS AFFAIR</h1>
         <h2>A Bot Sportello Prequel</h2>
